--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Elvis' blog" description="Home page of my blog">
-	This is a test
+	<div class="text-center mt-8 border-2 border-black p-4 rounded-lg">Personal thoughts and whatever I'd like to share with the world.</div>
 </Layout>
