--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,9 +20,9 @@ const { title, description } = Astro.props;
 		<title>{title}</title>
 	</head>
 	
-	<body>
+	<body class="flex items-center flex-col">
 		<Header />
-		<main class="p-4"><slot /></main>
+		<main class="p-4 flex flex-col items-center justify-center max-w-[768px]"><slot /></main>
 		
 	</body>
 </html>
