add font & fix sort

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,8 +8,8 @@ import neskLogoSmall from "../../src/assets/nesk-logo-small.png"
         <Image src={neskLogoSmall} class="w-16" alt="Logo of a book with the letters 'N.E.S.K.'" />
     </a>
 
-    <a href="/" class="hover:underline hover:underline-offset-4 decoration-yellow-green"><span class="font-bold">
+    <a href="/" class="hover:underline hover:underline-offset-4 decoration-yellow-green font-excalifont font-bold">
         home
-    </span></a>
+    </a>
 
 </header>
