change markdown styling

--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -2,7 +2,11 @@
 ---
 <div
   class="prose
-  prose-h1:font-bold prose-h1:text-xl
-  prose-a:text-blue-600 prose-p:text-justify prose-img:rounded-xl">
+  prose-h1:font-bold prose-h1:text-3xl prose-h1:text-flame
+  prose-h2:font-bold prose-h2:text-2xl prose-h2:text-dark-cyan
+  prose-h3:font-bold prose-h3:text-xl prose-h3:text-persian-rose
+  prose-a:text-blue-600 prose-img:rounded-xl
+  prose-ul:pl-4 prose-li:pl-0 prose-ol:pl-4"
+  >
   <slot />
 </div>
