--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import Header from "../components/Header.astro"
+import Footer from "../components/Footer.astro";
+import "../app.css"
 
 interface Props {
 	title: string,
@@ -7,11 +9,11 @@ interface Props {
 }
 
 const { title, description } = Astro.props;
-import "../app.css"
+
 ---
 
 <!doctype html>
-<html lang="en" class="bg-white-smoke text-raisin-black">
+<html lang="en" class="bg-white-smoke text-raisin-black min-h-screen">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content={description}/>
@@ -21,8 +23,9 @@ import "../app.css"
 		<title>{title}</title>
 	</head>
 	
-	<body class="flex items-center flex-col">
+	<body class="flex items-center flex-col min-h-screen">
 		<Header />
 		<main class="p-4 flex flex-col items-center justify-center max-w-[768px]"><slot /></main>
+		<Footer />
 	</body>
 </html>
