--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -6,7 +6,9 @@
   prose-h2:font-bold prose-h2:text-2xl prose-h2:text-dark-cyan
   prose-h3:font-bold prose-h3:text-xl prose-h3:text-persian-rose
   prose-a:text-blue-600 prose-img:rounded-xl
-  prose-ul:pl-4 prose-li:pl-0 prose-ol:pl-4"
+  prose-ul:pl-4 prose-li:pl-0 prose-ol:pl-4
+  prose-hr:my-8 prose-hr:border-raisin-black
+  prose-blockquote:border-flame"
   >
   <slot />
 </div>
