--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -16,6 +16,7 @@ const { Content } = await entry.render();
 ---
 
 <Layout title={entry.data.title} description={entry.data.description}>
+    <a href="/" class="text-2xl self-start pb-4 hover:text-yellow-green">&lArr;</a>
     <Prose>
         <Content />
     </Prose>
