--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const sortedPosts = sortPosts(allPosts)
 
 	<div class="w-full mt-8">
 		<p class="font-bold text-crayola-blue">Recent</p>
-		<hr />
+		<hr class="border-raisin-black"/>
 		<ul class="mt-4">
 			{sortedPosts.map((post) => (
 				<li class="grid grid-cols-3 mb-4">
