change homepage title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const allPosts = await getCollection("blog")
 const sortedPosts = sortPosts(allPosts)
 ---
 
-<Layout title="Elvis' blog" description="Home page of my blog">
+<Layout title="Home" description="Home page of my blog">
 	<div class=" font-bold text-4xl text-flame">Personal thoughts and whatever I'd like to share.</div>
 
 	<div class="w-full mt-8">
