--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const sortedPosts = sortPosts(allPosts)
 			{sortedPosts.map((post) => (
 				<li class="grid grid-cols-3 mb-4">
 					<p class="text-gray-400 text-sm">{post.data.publishDate.toISOString().split('T')[0].replace(/-/g, "-")}</p>
-					<a href=`/posts/${post.slug}` class="col-span-2 underline underline-offset-4 decoration-yellow-green hover:text-yellow-green">{post.data.title}</a>
+					<a href={`/posts/${post.id}`} class="col-span-2 underline underline-offset-4 decoration-yellow-green hover:text-yellow-green">{post.data.title}</a>
 				</li>
 			))}
 		</ul>
