--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -1,14 +1,17 @@
 ---
+
 ---
+
 <div
   class="prose
   prose-h1:font-bold prose-h1:text-3xl prose-h1:text-flame
-  prose-h2:font-bold prose-h2:text-2xl prose-h2:text-dark-cyan
-  prose-h3:font-bold prose-h3:text-xl prose-h3:text-persian-rose
+  prose-h2:font-bold prose-h2:text-2xl prose-h2:text-dark-cyan prose-h2:text-wrap
+  prose-h3:font-bold prose-h3:text-xl prose-h3:text-persian-rose prose-h3:text-wrap
   prose-a:text-crayola-blue prose-img:rounded-xl
+  prose-em:text-wrap
   prose-ul:pl-4 prose-li:pl-0 prose-ol:pl-4
   prose-hr:my-8 prose-hr:border-raisin-black
   prose-blockquote:border-flame"
-  >
+>
   <slot />
 </div>
