--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,31 +1,34 @@
 ---
-import Header from "../components/Header.astro"
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import "../app.css"
+import "../app.css";
 
 interface Props {
-	title: string,
-	description: string;
+  title: string;
+  description: string;
 }
 
 const { title, description } = Astro.props;
-
 ---
 
 <!doctype html>
 <html lang="en" class="bg-white-smoke text-raisin-black min-h-screen">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content={description}/>
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image" href="/favicon.png" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title} | Elvis' blog</title>
-	</head>
-	
-	<body class="flex items-center flex-col min-h-screen">
-		<Header />
-		<main class="p-4 pb-8 flex flex-col items-center justify-center max-w-[768px]"><slot /></main>
-		<Footer />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content={description} />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image" href="/favicon.png" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title} | Elvis' blog</title>
+  </head>
+
+  <body class="flex items-center flex-col min-h-screen font-nunito">
+    <Header />
+    <main
+      class="p-4 pb-8 flex flex-col items-center justify-center max-w-[768px]"
+    >
+      <slot />
+    </main>
+    <Footer />
+  </body>
 </html>
