--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,6 @@ const currentYear = new Date().getFullYear()
 ---
 
 <footer class="mt-auto py-4 bg-raisin-black text-gray-100 w-full flex flex-col items-center justify-center gap-2">
-    <a href="mailto:elvisnipah@gmail.com" class="text-white-smoke underline underline-offset-4" target="_blank" aria-label="Email">Send me an email</a>
+    <a href="mailto:elvisnipah@gmail.com" class="text-white-smoke hover:text-purple-400  underline underline-offset-4" target="_blank" aria-label="Email">Send me an email</a>
     <p>{currentYear} &copy; Elvis Nipah</p>
 </footer>
