--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import neskLogoSmall from "../../src/assets/nesk-logo-small.png";
 
   <a
     href="/"
-    class="hover:underline hover:underline-offset-4 decoration-yellow-green font-excalifont font-bold"
+    class="hover:underline hover:underline-offset-4 decoration-purple-500 font-excalifont font-bold"
   >
     home
   </a>
