--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,12 +4,8 @@ import neskLogoSmall from "../../src/assets/nesk-logo-small.png";
 ---
 
 <header class="flex justify-between items-center p-4 w-full">
-  <a href="/">
-    <Image
-      src={neskLogoSmall}
-      width={64}
-      alt="Logo of a book with the letters 'N.E.S.K.'"
-    />
+  <a class="font-bold hover:underline hover:underline-offset-4 decoration-purple-500 font-excalifont" href="/">
+    elvis' blog
   </a>
 
   <a
