--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -4,11 +4,10 @@
 
 <div
   class="prose
-  prose-h1:font-bold prose-h1:text-3xl prose-h1:text-purple-700
-  prose-h2:font-bold prose-h2:text-2xl prose-h2:text-purple-500
-  prose-h3:font-bold prose-h3:text-xl prose-h3:text-blue-800 prose-h3:text-wrap
+  prose-h1:font-bold prose-h1:text-3xl prose-h1:text-gray-900
+  prose-h2:font-bold prose-h2:text-2xl prose-h2:text-gray-700
+  prose-h3:font-bold prose-h3:text-xl prose-h3:text-gray-500
   prose-a:text-purple-700 hover:prose-a:text-purple-500 prose-img:rounded-xl
-  prose-em:text-wrap
   prose-ul:pl-4 prose-li:pl-0 prose-ol:pl-4
   prose-hr:my-8 prose-hr:border-raisin-black
   prose-blockquote:border-flame"
