--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title, description } = Astro.props;
   <body class="flex items-center flex-col min-h-screen font-inter">
     <Header />
     <main
-      class="p-4 pb-8 flex flex-col items-center justify-center max-w-[768px]"
+      class="p-4 pb-8 flex flex-col items-center justify-center max-w-[1080px] md:min-h-[70vh]"
     >
       <slot />
     </main>
