--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,18 +9,21 @@ const sortedPosts = sortPosts(allPosts)
 ---
 
 <Layout title="Home" description="Home page of my blog">
-	<div class=" font-bold text-4xl text-purple-700">Personal thoughts and whatever I'd like to share.</div>
+	<div class="flex flex-col md:flex-row md:min-h-[70vh] md:gap-8">
+		<div class=" font-bold text-4xl text-gray-700 self-center justify-self-center">Personal thoughts and whatever I'd like to share.</div>
 
-	<div class="w-full mt-8">
-		<p class="font-bold text-purple-500">Recent</p>
-		<hr class="border-raisin-black"/>
-		<ul class="mt-4">
-			{sortedPosts.map((post) => (
-				<li class="grid grid-cols-3 mb-4">
-					<p class="text-gray-400 text-sm">{post.data.publishDate.toISOString().split('T')[0].replace(/-/g, "-")}</p>
-					<a href={`/posts/${post.id}`} class="col-span-2 underline underline-offset-4 decoration-purple-500 hover:text-blue-800">{post.data.title}</a>
-				</li>
-			))}
-		</ul>
+		<div class="w-full mt-8">
+			<ul class="mt-4">
+				{sortedPosts.map((post) => (
+					<li class="hover:bg-purple-400 border-b-[1px] border-black first:border-t-[1px]">
+						<a href={`/posts/${post.id}`} class="grid grid-cols-3 py-1">
+							<p class="text-xs self-center">{post.data.publishDate.toISOString().split('T')[0].replace(/-/g, "-")}</p>
+							<p class="col-span-2 font-medium">{post.data.title}</p>
+						</a>
+					</li>				
+				))}
+			</ul>
+		</div>
 	</div>
+	
 </Layout>
