little bit of a ui refresh

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const currentYear = new Date().getFullYear()
 ---
 
-<footer class="mt-auto py-4 bg-raisin-black text-gray-100 w-full flex flex-col items-center justify-center gap-2">
+<footer class="mt-auto py-4 pb-24 bg-gray-950 text-gray-100 w-full flex flex-col items-center justify-center gap-2">
     <a href="mailto:elvisnipah@gmail.com" class="text-white-smoke hover:text-purple-400  underline underline-offset-4" target="_blank" aria-label="Email">Send me an email</a>
     <p class="text-xs">{currentYear} &copy; Elvis Nipah</p>
 </footer>
