--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,8 @@ import { Image } from "astro:assets";
 import neskLogoSmall from "../../src/assets/nesk-logo-small.png";
 ---
 
-<header class="flex justify-between items-center p-4 w-full">
-  <a class="font-bold hover:underline hover:underline-offset-4 decoration-purple-500 font-excalifont" href="/">
+<header class=" bg-gray-50 opacity-100 w-full flex justify-between items-center p-4 border-b-2 border-b-gray-300 sticky top-0">
+  <a class="font-bold hover:underline hover:underline-offset-4 decoration-purple-500" href="/">
     elvis' blog
   </a>
 
