--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -4,13 +4,14 @@
 
 <div
   class="prose
-  prose-h1:font-bold prose-h1:text-3xl prose-h1:text-gray-900
-  prose-h2:font-bold prose-h2:text-2xl prose-h2:text-gray-700
-  prose-h3:font-bold prose-h3:text-xl prose-h3:text-gray-500
-  prose-a:text-purple-700 hover:prose-a:text-purple-500 prose-img:rounded-xl
+  prose-h1:text-2xl prose-h1:text-gray-900 prose-h1:font-cinzel prose-h1:tracking-tighter
+  prose-h2:text-xl prose-h2:text-gray-800 prose-h2:font-cinzel prose-h2:tracking-widest
+  prose-h3:text-lg prose-h3:text-gray-700 prose-h3:font-cinzel prose-h3:tracking-widest
+  prose-p: md:text-lg
+  prose-a:text-blue-800
   prose-ul:pl-4 prose-li:pl-0 prose-ol:pl-4
-  prose-hr:my-8 prose-hr:border-raisin-black
-  prose-blockquote:border-flame"
+  prose-hr:my-8 prose-hr:border-gray-950
+  prose-blockquote:border-purple-500"
 >
   <slot />
 </div>
