--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,14 +10,14 @@ const sortedPosts = sortPosts(allPosts)
 
 <Layout title="Home" description="Home page of my blog">
 	<div class="flex flex-col md:flex-row md:min-h-[70vh] md:gap-8">
-		<div class=" font-bold text-4xl text-gray-700 self-center justify-self-center">Personal thoughts and whatever I'd like to share.</div>
+		<div class="font-cinzel font-bold text-4xl text-gray-700 self-center justify-self-center">Personal thoughts and whatever I'd like to share.</div>
 
 		<div class="w-full mt-8">
 			<ul class="mt-4">
 				{sortedPosts.map((post) => (
 					<li class="hover:bg-purple-400 border-b-[1px] border-black first:border-t-[1px]">
 						<a href={`/posts/${post.id}`} class="grid grid-cols-3 py-1">
-							<p class="text-xs self-center">{post.data.publishDate.toISOString().split('T')[0].replace(/-/g, "-")}</p>
+							<p class="text-xs font-light self-center text-gray-500">{post.data.publishDate.toISOString().split('T')[0].replace(/-/g, "-")}</p>
 							<p class="col-span-2 font-medium">{post.data.title}</p>
 						</a>
 					</li>				
